# image-stippling

./: .gitignore  LICENSE  README.md  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: deploy.yml
src/: App.tsx  index.css  wasm.d.ts
src/components/: ImageUploader.tsx  ParametersForm.tsx  ResultDisplay.tsx  TerminalHeader.tsx
src/hooks/: useStippling.ts
src/styles/: terminal.css
wasm/: Cargo.toml  README.md
wasm/src/: image_processing.rs  lib.rs  point.rs  stippling.rs
