[package]
name = "stippling-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.64"
image = { version = "0.24.6", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
voronator = "0.2.1"
rayon = { version = "1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.64", features = ["console"] }

[features]
default = []

[profile.release]
opt-level = 3
lto = true
